--- a/css/style.css
+++ b/css/style.css
@@ -1,740 +1,19 @@
-@font-face {
-	font-family: 'Martix Code NFI';
-	font-variant: normal;
-	font-weight: normal;
-	font-style: normal;
-	src: url("https://raw.githubusercontent.com/UstymUkhman/experiments/master/src/assets/fonts/matrix-code/Matrix%20Code%20NFI.otf?raw=true") format("opentype"), url("https://raw.githubusercontent.com/UstymUkhman/experiments/master/src/assets/fonts/matrix-code/Matrix%20Code%20NFI.ttf?raw=true") format("truetype");
-}
-
-* {
-	margin: 0;
-	padding: 0;
-}
-
-html, body {
-	width: 100%;
-	height: 100%;
-	min-width: 100%;
-	min-height: 100%;
-	max-width: 100%;
-	max-height: 100%;
-	-moz-osx-font-smoothing: none;
-	-webkit-font-smoothing: none;
-	text-size-adjust: none;
-	touch-callout: none;
-	user-select: none;
-	background-color: black;
-	overflow: hidden;
-}
-
-div.code-container {
-	background-color: transparent;
-	position: absolute;
-	margin: auto;
-	height: 110%;
-	width: 110%;
-	left: -5%;
-	top: -5%;
-	font-family: 'Martix Code NFI';
-	font-size: 30px;
-	color: #00cc00;
-}
-
-div.code-container div#matrix-code {
-	width: 100%;
-	height: 100%;
-}
-
-div.code-container div#matrix-code p.code-column {
-	position: absolute;
-	height: auto;
-	width: 40px;
-	text-align: center;
-	line-height: 25px;
-}
-
-div.code-container div#matrix-code p.code-column.column-size-12 {
-	margin-left: -0.5%;
-	z-index: 1;
-}
-
-div.code-container div#matrix-code p.code-column.column-size-25 {
-	margin-left: 0%;
-	z-index: 2;
-}
-
-div.code-container div#matrix-code p.code-column.column-size-60 {
-	margin-left: -0.75%;
-	z-index: 3;
-}
-
-div.code-container div#matrix-code p.code-column span {
-	text-shadow: 0 -12px 10px #00cc00;
-	display: block;
-	width: auto;
-}
-
-div.code-container div#matrix-code p.code-column span:nth-child(-n+5) {
-	opacity: .3;
-}
-
-div.code-container div#matrix-code p.code-column span:nth-child(n+6):nth-child(-n+10) {
-	opacity: .42;
-}
-
-div.code-container div#matrix-code p.code-column span:nth-child(n+11):nth-child(-n+15) {
-	opacity: .54;
-}
-
-div.code-container div#matrix-code p.code-column span:nth-child(n+16):nth-child(-n+25) {
-	opacity: .66;
-}
-
-div.code-container div#matrix-code p.code-column span:nth-child(n+26):nth-child(-n+35) {
-	opacity: .78;
-}
-
-div.code-container div#matrix-code p.code-column span:nth-child(n+36):nth-child(-n+40) {
-	opacity: .9;
-}
-
-div.code-container div#matrix-code p.code-column span:nth-child(n+41) {
-	opacity: 1;
-}
-
-div.code-container div#matrix-code p.code-column span:nth-last-child(3) {
-	color: #88ff88;
-}
-
-div.code-container div#matrix-code p.code-column span:nth-last-child(2) {
-	color: #bbffbb;
-}
-
-div.code-container div#matrix-code p.code-column span:nth-last-child(1) {
-	color: #ddffdd;
-}
-
-div.code-container div#matrix-code p.code-column span.code-size-12 {
-	font-size: 12px;
-	height: 12px;
-}
-
-div.code-container div#matrix-code p.code-column span.code-size-25 {
-	font-size: 25px;
-	height: 25px;
-}
-
-div.code-container div#matrix-code p.code-column span.code-size-60 {
-	font-size: 60px;
-	height: 60px;
-}
-
-div.code-container div#matrix-code p.code-0 {
-	position: absolute;
-	left: 0%;
-	animation: drop 11705ms linear 144ms infinite;
-}
-
-div.code-container div#matrix-code p.code-1 {
-	position: absolute;
-	left: 1%;
-	animation: drop 6869ms linear 71ms infinite;
-}
-
-div.code-container div#matrix-code p.code-2 {
-	position: absolute;
-	left: 2%;
-	animation: drop 1540ms linear 355ms infinite;
-}
-
-div.code-container div#matrix-code p.code-3 {
-	position: absolute;
-	left: 3%;
-	animation: drop 6569ms linear 505ms infinite;
-}
-
-div.code-container div#matrix-code p.code-4 {
-	position: absolute;
-	left: 4%;
-	animation: drop 14651ms linear 703ms infinite;
-}
-
-div.code-container div#matrix-code p.code-5 {
-	position: absolute;
-	left: 5%;
-	animation: drop 10584ms linear 885ms infinite;
-}
-
-div.code-container div#matrix-code p.code-6 {
-	position: absolute;
-	left: 6%;
-	animation: drop 7912ms linear 878ms infinite;
-}
-
-div.code-container div#matrix-code p.code-7 {
-	position: absolute;
-	left: 7%;
-	animation: drop 8524ms linear 481ms infinite;
-}
-
-div.code-container div#matrix-code p.code-8 {
-	position: absolute;
-	left: 8%;
-	animation: drop 7791ms linear 500ms infinite;
-}
-
-div.code-container div#matrix-code p.code-9 {
-	position: absolute;
-	left: 9%;
-	animation: drop 3718ms linear 606ms infinite;
-}
-
-div.code-container div#matrix-code p.code-10 {
-	position: absolute;
-	left: 10%;
-	animation: drop 2564ms linear 579ms infinite;
-}
-
-div.code-container div#matrix-code p.code-11 {
-	position: absolute;
-	left: 11%;
-	animation: drop 13790ms linear 765ms infinite;
-}
-
-div.code-container div#matrix-code p.code-12 {
-	position: absolute;
-	left: 12%;
-	animation: drop 2681ms linear 630ms infinite;
-}
-
-div.code-container div#matrix-code p.code-13 {
-	position: absolute;
-	left: 13%;
-	animation: drop 12083ms linear 161ms infinite;
-}
-
-div.code-container div#matrix-code p.code-14 {
-	position: absolute;
-	left: 14%;
-	animation: drop 5895ms linear 490ms infinite;
-}
-
-div.code-container div#matrix-code p.code-15 {
-	position: absolute;
-	left: 15%;
-	animation: drop 5883ms linear 554ms infinite;
-}
-
-div.code-container div#matrix-code p.code-16 {
-	position: absolute;
-	left: 16%;
-	animation: drop 2494ms linear 668ms infinite;
-}
-
-div.code-container div#matrix-code p.code-17 {
-	position: absolute;
-	left: 17%;
-	animation: drop 12774ms linear 80ms infinite;
-}
-
-div.code-container div#matrix-code p.code-18 {
-	position: absolute;
-	left: 18%;
-	animation: drop 6172ms linear 768ms infinite;
-}
-
-div.code-container div#matrix-code p.code-19 {
-	position: absolute;
-	left: 19%;
-	animation: drop 12073ms linear 36ms infinite;
-}
-
-div.code-container div#matrix-code p.code-20 {
-	position: absolute;
-	left: 20%;
-	animation: drop 1304ms linear 246ms infinite;
-}
-
-div.code-container div#matrix-code p.code-21 {
-	position: absolute;
-	left: 21%;
-	animation: drop 4979ms linear 670ms infinite;
-}
-
-div.code-container div#matrix-code p.code-22 {
-	position: absolute;
-	left: 22%;
-	animation: drop 8590ms linear 364ms infinite;
-}
-
-div.code-container div#matrix-code p.code-23 {
-	position: absolute;
-	left: 23%;
-	animation: drop 10330ms linear 23ms infinite;
-}
-
-div.code-container div#matrix-code p.code-24 {
-	position: absolute;
-	left: 24%;
-	animation: drop 10311ms linear 243ms infinite;
-}
-
-div.code-container div#matrix-code p.code-25 {
-	position: absolute;
-	left: 25%;
-	animation: drop 13751ms linear 959ms infinite;
-}
-
-div.code-container div#matrix-code p.code-26 {
-	position: absolute;
-	left: 26%;
-	animation: drop 8381ms linear 911ms infinite;
-}
-
-div.code-container div#matrix-code p.code-27 {
-	position: absolute;
-	left: 27%;
-	animation: drop 14529ms linear 44ms infinite;
-}
-
-div.code-container div#matrix-code p.code-28 {
-	position: absolute;
-	left: 28%;
-	animation: drop 14335ms linear 287ms infinite;
-}
-
-div.code-container div#matrix-code p.code-29 {
-	position: absolute;
-	left: 29%;
-	animation: drop 10703ms linear 773ms infinite;
-}
-
-div.code-container div#matrix-code p.code-30 {
-	position: absolute;
-	left: 30%;
-	animation: drop 10980ms linear 233ms infinite;
-}
-
-div.code-container div#matrix-code p.code-31 {
-	position: absolute;
-	left: 31%;
-	animation: drop 12744ms linear 232ms infinite;
-}
-
-div.code-container div#matrix-code p.code-32 {
-	position: absolute;
-	left: 32%;
-	animation: drop 9959ms linear 315ms infinite;
-}
-
-div.code-container div#matrix-code p.code-33 {
-	position: absolute;
-	left: 33%;
-	animation: drop 2397ms linear 226ms infinite;
-}
-
-div.code-container div#matrix-code p.code-34 {
-	position: absolute;
-	left: 34%;
-	animation: drop 13981ms linear 617ms infinite;
-}
-
-div.code-container div#matrix-code p.code-35 {
-	position: absolute;
-	left: 35%;
-	animation: drop 7246ms linear 896ms infinite;
-}
-
-div.code-container div#matrix-code p.code-36 {
-	position: absolute;
-	left: 36%;
-	animation: drop 4279ms linear 127ms infinite;
-}
-
-div.code-container div#matrix-code p.code-37 {
-	position: absolute;
-	left: 37%;
-	animation: drop 7817ms linear 672ms infinite;
-}
-
-div.code-container div#matrix-code p.code-38 {
-	position: absolute;
-	left: 38%;
-	animation: drop 1011ms linear 123ms infinite;
-}
-
-div.code-container div#matrix-code p.code-39 {
-	position: absolute;
-	left: 39%;
-	animation: drop 8372ms linear 556ms infinite;
-}
-
-div.code-container div#matrix-code p.code-40 {
-	position: absolute;
-	left: 40%;
-	animation: drop 6947ms linear 896ms infinite;
-}
-
-div.code-container div#matrix-code p.code-41 {
-	position: absolute;
-	left: 41%;
-	animation: drop 12050ms linear 864ms infinite;
-}
-
-div.code-container div#matrix-code p.code-42 {
-	position: absolute;
-	left: 42%;
-	animation: drop 4056ms linear 35ms infinite;
-}
-
-div.code-container div#matrix-code p.code-43 {
-	position: absolute;
-	left: 43%;
-	animation: drop 12491ms linear 378ms infinite;
-}
-
-div.code-container div#matrix-code p.code-44 {
-	position: absolute;
-	left: 44%;
-	animation: drop 6935ms linear 981ms infinite;
-}
-
-div.code-container div#matrix-code p.code-45 {
-	position: absolute;
-	left: 45%;
-	animation: drop 7770ms linear 456ms infinite;
-}
-
-div.code-container div#matrix-code p.code-46 {
-	position: absolute;
-	left: 46%;
-	animation: drop 2434ms linear 651ms infinite;
-}
-
-div.code-container div#matrix-code p.code-47 {
-	position: absolute;
-	left: 47%;
-	animation: drop 4825ms linear 66ms infinite;
-}
-
-div.code-container div#matrix-code p.code-48 {
-	position: absolute;
-	left: 48%;
-	animation: drop 9398ms linear 994ms infinite;
-}
-
-div.code-container div#matrix-code p.code-49 {
-	position: absolute;
-	left: 49%;
-	animation: drop 9966ms linear 823ms infinite;
-}
-
-div.code-container div#matrix-code p.code-50 {
-	position: absolute;
-	left: 50%;
-	animation: drop 8759ms linear 783ms infinite;
-}
-
-div.code-container div#matrix-code p.code-51 {
-	position: absolute;
-	left: 51%;
-	animation: drop 2919ms linear 342ms infinite;
-}
-
-div.code-container div#matrix-code p.code-52 {
-	position: absolute;
-	left: 52%;
-	animation: drop 14960ms linear 385ms infinite;
-}
-
-div.code-container div#matrix-code p.code-53 {
-	position: absolute;
-	left: 53%;
-	animation: drop 8429ms linear 481ms infinite;
-}
-
-div.code-container div#matrix-code p.code-54 {
-	position: absolute;
-	left: 54%;
-	animation: drop 7520ms linear 184ms infinite;
-}
-
-div.code-container div#matrix-code p.code-55 {
-	position: absolute;
-	left: 55%;
-	animation: drop 4298ms linear 902ms infinite;
-}
-
-div.code-container div#matrix-code p.code-56 {
-	position: absolute;
-	left: 56%;
-	animation: drop 6185ms linear 281ms infinite;
-}
-
-div.code-container div#matrix-code p.code-57 {
-	position: absolute;
-	left: 57%;
-	animation: drop 11713ms linear 989ms infinite;
-}
-
-div.code-container div#matrix-code p.code-58 {
-	position: absolute;
-	left: 58%;
-	animation: drop 10340ms linear 7ms infinite;
-}
-
-div.code-container div#matrix-code p.code-59 {
-	position: absolute;
-	left: 59%;
-	animation: drop 3066ms linear 241ms infinite;
-}
-
-div.code-container div#matrix-code p.code-60 {
-	position: absolute;
-	left: 60%;
-	animation: drop 8108ms linear 682ms infinite;
-}
-
-div.code-container div#matrix-code p.code-61 {
-	position: absolute;
-	left: 61%;
-	animation: drop 9497ms linear 42ms infinite;
-}
-
-div.code-container div#matrix-code p.code-62 {
-	position: absolute;
-	left: 62%;
-	animation: drop 3838ms linear 179ms infinite;
-}
-
-div.code-container div#matrix-code p.code-63 {
-	position: absolute;
-	left: 63%;
-	animation: drop 7473ms linear 367ms infinite;
-}
-
-div.code-container div#matrix-code p.code-64 {
-	position: absolute;
-	left: 64%;
-	animation: drop 8515ms linear 8ms infinite;
-}
-
-div.code-container div#matrix-code p.code-65 {
-	position: absolute;
-	left: 65%;
-	animation: drop 11520ms linear 158ms infinite;
-}
-
-div.code-container div#matrix-code p.code-66 {
-	position: absolute;
-	left: 66%;
-	animation: drop 10226ms linear 659ms infinite;
-}
-
-div.code-container div#matrix-code p.code-67 {
-	position: absolute;
-	left: 67%;
-	animation: drop 10727ms linear 875ms infinite;
-}
-
-div.code-container div#matrix-code p.code-68 {
-	position: absolute;
-	left: 68%;
-	animation: drop 1856ms linear 772ms infinite;
-}
-
-div.code-container div#matrix-code p.code-69 {
-	position: absolute;
-	left: 69%;
-	animation: drop 7312ms linear 497ms infinite;
-}
-
-div.code-container div#matrix-code p.code-70 {
-	position: absolute;
-	left: 70%;
-	animation: drop 11389ms linear 180ms infinite;
-}
-
-div.code-container div#matrix-code p.code-71 {
-	position: absolute;
-	left: 71%;
-	animation: drop 13608ms linear 941ms infinite;
-}
-
-div.code-container div#matrix-code p.code-72 {
-	position: absolute;
-	left: 72%;
-	animation: drop 5797ms linear 385ms infinite;
-}
-
-div.code-container div#matrix-code p.code-73 {
-	position: absolute;
-	left: 73%;
-	animation: drop 11164ms linear 721ms infinite;
-}
-
-div.code-container div#matrix-code p.code-74 {
-	position: absolute;
-	left: 74%;
-	animation: drop 2981ms linear 723ms infinite;
-}
-
-div.code-container div#matrix-code p.code-75 {
-	position: absolute;
-	left: 75%;
-	animation: drop 4412ms linear 786ms infinite;
-}
-
-div.code-container div#matrix-code p.code-76 {
-	position: absolute;
-	left: 76%;
-	animation: drop 14850ms linear 864ms infinite;
-}
-
-div.code-container div#matrix-code p.code-77 {
-	position: absolute;
-	left: 77%;
-	animation: drop 4500ms linear 208ms infinite;
-}
-
-div.code-container div#matrix-code p.code-78 {
-	position: absolute;
-	left: 78%;
-	animation: drop 5183ms linear 292ms infinite;
-}
-
-div.code-container div#matrix-code p.code-79 {
-	position: absolute;
-	left: 79%;
-	animation: drop 7438ms linear 228ms infinite;
-}
-
-div.code-container div#matrix-code p.code-80 {
-	position: absolute;
-	left: 80%;
-	animation: drop 14297ms linear 784ms infinite;
-}
-
-div.code-container div#matrix-code p.code-81 {
-	position: absolute;
-	left: 81%;
-	animation: drop 12651ms linear 197ms infinite;
-}
-
-div.code-container div#matrix-code p.code-82 {
-	position: absolute;
-	left: 82%;
-	animation: drop 6870ms linear 165ms infinite;
-}
-
-div.code-container div#matrix-code p.code-83 {
-	position: absolute;
-	left: 83%;
-	animation: drop 2299ms linear 986ms infinite;
-}
-
-div.code-container div#matrix-code p.code-84 {
-	position: absolute;
-	left: 84%;
-	animation: drop 9103ms linear 595ms infinite;
-}
-
-div.code-container div#matrix-code p.code-85 {
-	position: absolute;
-	left: 85%;
-	animation: drop 13613ms linear 548ms infinite;
-}
-
-div.code-container div#matrix-code p.code-86 {
-	position: absolute;
-	left: 86%;
-	animation: drop 12359ms linear 929ms infinite;
-}
-
-div.code-container div#matrix-code p.code-87 {
-	position: absolute;
-	left: 87%;
-	animation: drop 4386ms linear 832ms infinite;
-}
-
-div.code-container div#matrix-code p.code-88 {
-	position: absolute;
-	left: 88%;
-	animation: drop 12749ms linear 33ms infinite;
-}
-
-div.code-container div#matrix-code p.code-89 {
-	position: absolute;
-	left: 89%;
-	animation: drop 6934ms linear 479ms infinite;
-}
-
-div.code-container div#matrix-code p.code-90 {
-	position: absolute;
-	left: 90%;
-	animation: drop 3387ms linear 360ms infinite;
-}
-
-div.code-container div#matrix-code p.code-91 {
-	position: absolute;
-	left: 91%;
-	animation: drop 9088ms linear 277ms infinite;
-}
-
-div.code-container div#matrix-code p.code-92 {
-	position: absolute;
-	left: 92%;
-	animation: drop 12212ms linear 295ms infinite;
-}
-
-div.code-container div#matrix-code p.code-93 {
-	position: absolute;
-	left: 93%;
-	animation: drop 14555ms linear 797ms infinite;
-}
-
-div.code-container div#matrix-code p.code-94 {
-	position: absolute;
-	left: 94%;
-	animation: drop 7751ms linear 259ms infinite;
-}
-
-div.code-container div#matrix-code p.code-95 {
-	position: absolute;
-	left: 95%;
-	animation: drop 14159ms linear 490ms infinite;
-}
-
-div.code-container div#matrix-code p.code-96 {
-	position: absolute;
-	left: 96%;
-	animation: drop 2596ms linear 431ms infinite;
-}
-
-div.code-container div#matrix-code p.code-97 {
-	position: absolute;
-	left: 97%;
-	animation: drop 14915ms linear 505ms infinite;
-}
-
-div.code-container div#matrix-code p.code-98 {
-	position: absolute;
-	left: 98%;
-	animation: drop 9957ms linear 792ms infinite;
-}
-
-div.code-container div#matrix-code p.code-99 {
-	position: absolute;
-	left: 99%;
-	animation: drop 2814ms linear 246ms infinite;
-}
-
-@keyframes drop {
-	from {
-		transform: translateY(-100%);
-	}
-
-	to {
-		transform: translateY(100%);
-	}
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+body {
+  overflow: hidden;
+}
+
+/* 
+  Rotate the canvas area so that the letters appear mirrored 
+*/
+#matrix {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+  max-width: 100%;
 }
