--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,20 @@
-body {
+body{
   margin: 0;
-  padding: 0;
-  height: 100%;
-  background-color: rgb(199, 226, 173);
+  background-color: green;
+  color: white;
 }
 
-body {
-  overflow: hidden;
+.jumbotron{
+  color: navy;
 }
 
-/* 
-  Rotate the canvas area so that the letters appear mirrored 
-*/
-#matrix {
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-  max-width: 100%;
+.footer{
+  position: absolute;
+  bottom:  0px;
+  padding: 10px;
+  background-color: green;
+}
+
+.container{
+  
 }
